--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<meta name="keywords" content="Webdesign, Graphiste web, Webdesigner, Entreprise webdesign lyon, Créer un site responsive">
