--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-		
+		<meta http-equiv="Cache-control" content="public" max-age=604800>
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
