--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 		<meta name="keywords" content="Webdesign, Graphiste web, Webdesigner, Entreprise webdesign lyon, Créer un site responsive">
 		<meta name="description" content="La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+		<meta http-equiv="Cache-control" content="Public" max-age="60300">
+
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-		<meta http-equiv="Cache-control" content="private" max-age=60300 >
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
