--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="Cache-control" content="Public" max-age="60300">
 
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css" low>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
