--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css" low>
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css" disabled>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
@@ -47,8 +47,7 @@
 								<li>
 									<a href="index.html">Accueil</a>
 								</li>
-								<li>
-								</li>
+						
 								<li>
 									<a href="page2.html">page2 &gt;</a>
 								</li>
