adding google analytics

--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
 
 		
 	<!-- Analytics -->
-	
-	<!-- Analytics END -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0RR4BW1Q61"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-0RR4BW1Q61');
+	</script>
+		<!-- Analytics END -->
 		
 	</head>
 	<body>
