remove links from footer tag

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 		
 		 
-		<script src="./js/jquery-2.1.0.js" defer></script>
-		<script src="./js/bootstrap.js" defer></script>
-		<script src="./js/blocs.js" defer></script>
-		<script src="./js/jquery.touchSwipe.js" defer></script>
-		<script src="./js/gmaps.js" defer></script>
+		<script src="./js/jquery-2.1.0.js" async></script>
+		<script src="./js/bootstrap.js" async></script>
+		<script src="./js/blocs.js" async></script>
+		<script src="./js/jquery.touchSwipe.js" async></script>
+		<script src="./js/gmaps.js" async></script>
 	
 		<title>La panthère</title>
 
@@ -25,11 +25,10 @@
 	<!-- Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0RR4BW1Q61"></script>
 	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-
-	gtag('config', 'G-0RR4BW1Q61');
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'G-0RR4BW1Q61');
 	</script>
 		<!-- Analytics END -->
 		
@@ -145,12 +144,12 @@
 			<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace black-background">
-						<div class="col-sm-12">
+						<div class="col-sm-12 background-white">
 							<h2 class="mg-md text-center tc-white">
 								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 							</h2>
-							<p class="text-center white">
-								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+							<p class="text-center txt">
+								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="txt txt-hover" href="page2.html">Contactez notre équipe</a><br>
 							</p>
 						</div>
 					</div>
@@ -212,10 +211,10 @@
 			<!-- bloc-4-portfolio END -->
 
 			<!-- bloc-5-cta -->
-			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
-				<div class="container bloc-lg">
+			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc texture-paper" id="bloc-5-cta">
+				<div class="container bloc-lg Disflex">
 					<div class="row">
-						<h2 class="mg-md text-center tc-white">
+						<h2 class="mg-md text-center tc-white txt-h2">
 							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 						</h2>
 						<div class="col-sm-12 text-center">
@@ -254,46 +253,6 @@
 									<div class="text-center">
 										<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 									</div>
-								</div>
-								<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
-							</div>
-							<div class="row">
-								<div class="col-sm-4">
-									Partenaires
-										<ul>
-											<li><a href="voiture.com">voiture.com</a></li>
-											<li><a href="pizza.com">pizza.com</a></li>
-											<li><a href="matoiture.com">matoiture.com</a></li>
-											<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-										</ul>		
-								</div>
-								<div class="col-sm-4">
-									Annuaires liste 1
-									<ul>
-										<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-										<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-										<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-										<li><a href="123seoture.com">123seo.com</a></li>
-										<li><a href="123site.com">123site.com</a></li>
-										<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-										<li><a href="listeagence.com">listeagence.com</a></li>
-										<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-										<li><a href="listeseo.com">listeseo.com</a></li>
-									</ul>
-								</div>
-								<div class="col-sm-4">
-									Annuaires liste 2
-									<ul>
-										<li><a href="betterseo.com">betterseo.com</a></li>
-										<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-										<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-										<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-										<li><a href="liensagogo.com">liensagogo.com</a></li>
-										<li><a href="backlink.com">backlink.com</a></li>
-										<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-										<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-										<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-									</ul>
 								</div>
 							</div>
 						</div>
