--- a/page2.html
+++ b/page2.html
@@ -22,18 +22,22 @@
 
 		
 	<!-- Analytics -->
-	
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0RR4BW1Q61"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'G-0RR4BW1Q61');
+	</script>
 	<!-- Analytics END -->
 		
 	</head>
 	<body>
 	<!-- Principal conteneur -->
 		<div class="page-container">
-			
 			<!-- bloc-0 -->
 			<header class="bloc bgc-white l-bloc " id="bloc-0">
 				<div class="container bloc-sm">
-			
 					<nav class="navbar row">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
