edited title and description

--- a/page2.html
+++ b/page2.html
@@ -18,7 +18,8 @@
 		<script src="./js/blocs.js" async></script>
 		<script src="./js/jqBootstrapValidation.js" async></script>
 		<script src="./js/formHandler.js" async></script>
-		<title>page2</title>
+
+		<title>La panthère | Contact | Agence web design à Lyon</title>
 
 		
 	<!-- Analytics -->
