--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="keywords" content="Webdesign, Graphiste web, Webdesigner, Entreprise webdesign lyon, Créer un site responsive">
-		<meta name="description" content="La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -19,7 +18,8 @@
 		<script src="./js/jquery.touchSwipe.js" async></script>
 		<script src="./js/gmaps.js" async></script>
 	
-		<title>La panthère</title>
+		<title>La panthère | Accueil | Agence web design à Lyon</title>
+		<meta name="description" content="La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.">
 
 		
 	<!-- Analytics -->
