--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="keywords" content="Webdesign, Graphiste web, Webdesigner, Entreprise webdesign lyon, Créer un site responsive">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex" />
 
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css" >
@@ -12,10 +13,11 @@
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 		
 		 
-		<script src="./js/jquery-2.1.0.js" async></script>
 		<script src="./js/bootstrap.js" async></script>
-		<script src="./js/blocs.js" async></script>
+		<script src="./js/jquery-2.1.0.js" ></script>
+		<script src="./js/jqBootstrapValidation.js" async></script>
 		<script src="./js/jquery.touchSwipe.js" async></script>
+		<script src="./js/blocs.js" async></script>
 		<script src="./js/gmaps.js" async></script>
 	
 		<title>La panthère | Accueil | Agence web design à Lyon</title>
@@ -46,7 +48,7 @@
 						<div class="navbar-header">
 							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="lyon web design logo agence la panthere" width="240" height="40" /></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+								<span data-toggle="dropdown" class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
 						</div>
 						<div  class="collapse navbar-collapse navbar-1 special-dropdown-nav">
@@ -171,7 +173,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="bouquin ouvert empiler avec un léger décalage"  class="img-responsive portfolio-thumb"  width="270" height="270"/></a>
+							<a href="#" data-lightbox="img/webp/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/webp/1.webp" alt="bouquin ouvert empiler avec un léger décalage"  class="img-responsive portfolio-thumb"  width="270" height="270"/></a>
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
 							</h3>
@@ -180,7 +182,7 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="image d'une photographe vue de profil tenant un appareils photo sur un trepied et regardant dans l'objectifs" width="270" height="270"/></a>
+							<a href="#" data-lightbox="img/webp/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/webp/2.webp" class="img-responsive portfolio-thumb" alt="image d'une photographe vue de profil tenant un appareils photo sur un trepied et regardant dans l'objectifs" width="270" height="270"/></a>
 							<h3 class="mg-md text-center">
 								Création d'un site web pour photographes
 							</h3>
