--- a/page2.html
+++ b/page2.html
@@ -13,10 +13,10 @@
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 		
 		
-		<script src="./js/jquery-2.1.0.js" async></script>
+		<script src="./js/jquery-2.1.0.js" ></script>
 		<script src="./js/bootstrap.js" async></script>
 		<script src="./js/blocs.js" async></script>
-		<script src="./js/jqBootstrapValidation.js" async></script>
+		<script src="./js/jqBootstrapValidation.js" ></script>
 		<script src="./js/formHandler.js" async></script>
 
 		<title>La panthère | Contact | Agence web design à Lyon</title>
@@ -43,7 +43,7 @@
 						<div class="navbar-header">
 							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+								<span data-toggle="dropdown" class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
 						</div>
 						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
