--- a/page2.html
+++ b/page2.html
@@ -5,8 +5,9 @@
 		<meta name="keywords" content="">
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+		<meta name="robots" content="noindex" />
 		
+		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
