--- a/index.html
+++ b/index.html
@@ -1,85 +1,97 @@
 <!doctype html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8">
-		<meta name="keywords" content="Webdesign, Graphiste web, Webdesigner, Entreprise webdesign lyon, Créer un site responsive">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		
 
-		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css" >
-		<link rel="stylesheet" type="text/css" href="./css/style.css">
-		<link  rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-		
-		 
-		<script src="./js/bootstrap.js" async></script>
-		<script src="./js/jquery-2.1.0.js" ></script>
-		<script src="./js/jqBootstrapValidation.js" async></script>
-		<script src="./js/jquery.touchSwipe.js" async></script>
-		<script src="./js/blocs.js" async></script>
-		<script src="./js/gmaps.js" async></script>
-	
-		<title>La panthère | Accueil | Agence web design à Lyon</title>
-		<meta name="description" content="La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.">
+<head>
+	<meta charset="utf-8">
+	<meta name="keywords"
+		content="Webdesign, Graphiste web, Webdesigner, Entreprise webdesign lyon, Créer un site responsive">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		
+
+	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+
+
+	<script src="./js/bootstrap.js" async></script>
+	<script src="./js/jquery-2.1.0.js"></script>
+	<script src="./js/jqBootstrapValidation.js" async></script>
+	<script src="./js/jquery.touchSwipe.js" async></script>
+	<script src="./js/blocs.js" async></script>
+	<script src="./js/gmaps.js" async></script>
+
+	<title>La panthère | Accueil | Agence web design à Lyon</title>
+	<meta name="description"
+		content="La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.">
+
+
 	<!-- Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0RR4BW1Q61"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
+		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 		gtag('config', 'G-0RR4BW1Q61');
 	</script>
 	<!-- Analytics END -->
-		
-	</head>
-	<body>
-		<!-- Principal conteneur -->
-		<div class="page-container">
-			
-			<!-- bloc-0 -->
-			
-			<header class="bloc bgc-white l-bloc " id="bloc-0">
-				<div class="container bloc-sm">
-			
-					<nav class="navbar row">
-						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="lyon web design logo agence la panthere" width="240" height="40" /></a>
-							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-								<span data-toggle="dropdown" class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-							</button>
-						</div>
-						<div  class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-							<ul class="site-navigation nav navbar-nav">
-								<li >
-									<a href="index.html" tabindex="0" >Accueil</a>
-								</li>
-								<li >
-									<a href="#bloc-4-portfolio" tabindex="0">Nos réalisations</a>
-								</li>
-								<li >
-									<a href="page2.html" tabindex="0">Contact</a>
-								</li>
-							</ul>
-						</div>
-					</nav>
-				</div>
-			</header>
-			<!-- bloc-0 END -->
+
+</head>
+
+<body>
+	<!-- Principal conteneur -->
+	<div class="page-container">
+
+		<!-- bloc-0 -->
+
+		<header class="bloc bgc-white l-bloc " id="bloc-0">
+			<div class="container bloc-sm">
+
+				<nav class="navbar row">
+					<div class="navbar-header">
+						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
+								alt="lyon web design logo agence la panthere" width="240" height="40" /></a>
+						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
+							data-toggle="collapse" data-target=".navbar-1">
+							<span data-toggle="dropdown" class="sr-only">Toggle navigation</span><span
+								class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+						</button>
+					</div>
+					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+						<ul class="site-navigation nav navbar-nav">
+							<li>
+								<a href="index.html" tabindex="0">Accueil</a>
+							</li>
+							<li>
+								<a href="#bloc-4-portfolio" tabindex="0">Nos réalisations</a>
+							</li>
+							<li>
+								<a href="page2.html" tabindex="0">Contact</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
+			</div>
+		</header>
+		<!-- bloc-0 END -->
 		<main>
 			<!-- bloc-1-presentation -->
-			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+			<section
+				class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
+				id="bloc-1-hero">
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12 background-transparent">
-							<img src="img/logo.png" class="center-block image-resize-mode" alt="logo de lagence représentent une tête de panthère entouré de d'un cercle blanc"  width="100" height="100"/>
+							<img src="img/logo.png" class="center-block image-resize-mode"
+								alt="logo de lagence représentent une tête de panthère entouré de d'un cercle blanc"
+								width="100" height="100" />
 							<h1 class="text-center hero-bloc-text tc-white ">
 								Agence La Panthère
 							</h1>
 							<div class="text-center">
-								<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" >Contact</a>
+								<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+									id="cta-hero">Contact</a>
 							</div>
 						</div>
 					</div>
@@ -105,7 +117,8 @@
 								Web design
 							</h3>
 							<p class="text-center ">
-								Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+								Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez
+								de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 							</p>
 						</div>
 						<div class="col-sm-4">
@@ -116,7 +129,9 @@
 								&nbsp;Stratégie
 							</h3>
 							<p class="text-center ">
-								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
+								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour
+								comprendre vos objectifs commerciaux afin de vous proposer le meilleur design
+								possible.<br>
 							</p>
 						</div>
 						<div class="col-sm-4">
@@ -127,17 +142,18 @@
 								Illustrations
 							</h3>
 							<p class="text-center ">
-								Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
+								Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
+								graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 							</p>
 						</div>
 					</div>
 					<div class="row voffset-lg voffset">
 						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 							<h3><strong>"L'agence La Panthère est une excellente agence web! Les <br>
-								web designers ont réussi à capturer l'essence de notre <br>
-								entreprise et à l'intégrer à notre site. Cela nous a aidé à <br>
-								doubler nos ventes en ligne à Lyon."</strong></h3>
-								<h4>Maxime Guibard, PDG de A vos fourchettes</h4>
+									web designers ont réussi à capturer l'essence de notre <br>
+									entreprise et à l'intégrer à notre site. Cela nous a aidé à <br>
+									doubler nos ventes en ligne à Lyon."</strong></h3>
+							<h4>Maxime Guibard, PDG de A vos fourchettes</h4>
 
 						</div>
 					</div>
@@ -146,15 +162,26 @@
 			<!-- bloc-2-services END -->
 
 			<!-- bloc-3-what-i-do -->
-			<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+			<section
+				class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
+				id="bloc-3-what-i-do">
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace black-background">
 						<div class="col-sm-12 background-white">
 							<h2 class="mg-md text-center tc-white">
-								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à
+								connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de
+								nouveaux clients .<br>
 							</h2>
 							<p class="text-center txt">
-								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a href="page2.html" tabindex="0" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a><br>
+								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale,
+								qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur
+								site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre
+								site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites
+								beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.
+								<br><br><a href="page2.html" tabindex="0"
+									class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+									id="cta-hero">Contact</a><br>
 							</p>
 						</div>
 					</div>
@@ -173,7 +200,10 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/webp/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/webp/1.webp" alt="bouquin ouvert empiler avec un léger décalage"  class="img-responsive portfolio-thumb"  width="270" height="270"/></a>
+							<a href="#" data-lightbox="img/webp/1.webp" data-gallery-id="gallery-1"
+								data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
+									src="img/webp/1.webp" alt="bouquin ouvert empiler avec un léger décalage"
+									class="img-responsive portfolio-thumb" width="270" height="270" async /></a>
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
 							</h3>
@@ -182,7 +212,11 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/webp/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/webp/2.webp" class="img-responsive portfolio-thumb" alt="image d'une photographe vue de profil tenant un appareils photo sur un trepied et regardant dans l'objectifs" width="270" height="270"/></a>
+							<a href="#" data-lightbox="img/webp/2.webp" data-gallery-id="gallery-1"
+								data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
+									src="img/webp/2.webp" class="img-responsive portfolio-thumb"
+									alt="image d'une photographe vue de profil tenant un appareils photo sur un trepied et regardant dans l'objectifs"
+									width="270" height="270" async /></a>
 							<h3 class="mg-md text-center">
 								Création d'un site web pour photographes
 							</h3>
@@ -193,21 +227,30 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="divers appareils electronique (ordinateur, appareis photo, objectif, drone) poser sur un fond noir bien ranger " width="270" height="270"/></a>
+							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
+								data-caption="Création d'un site internet pour un voyageur"
+								data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb"
+									alt="divers appareils electronique (ordinateur, appareis photo, objectif, drone) poser sur un fond noir bien ranger "
+									width="270" height="270" async /></a>
 							<h3 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
 							</h3>
 							<p class="text-center">
-								Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
+								Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les
+								articles de ce voyageur.
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="" width="270" height="270"/></a>
+							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
+								data-caption="Conception d'un site pour une agence de mariage"
+								data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb"
+									alt="" width="270" height="270" async /></a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
 							</h3>
 							<p class="text-center">
-								Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
+								Nous avons travaillé avec cette agence pour créer un site internet permettant la
+								présentation détaillée de leurs prestations.
 							</p>
 						</div>
 					</div>
@@ -223,7 +266,8 @@
 							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 						</h2>
 						<div class="col-sm-12 text-center">
-							<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+							<a href="page2.html"
+								class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 						</div>
 					</div>
 				</div>
@@ -231,48 +275,54 @@
 			<!-- bloc-5-cta END -->
 
 			<!-- ScrollToTop Button -->
-			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
+					class="fa fa-chevron-up"></span></a>
 			<!-- ScrollToTop Button END-->
 
 		</main>
-			<!-- Footer - bloc-8 -->
-			<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-				<div class="container bloc-sm">
-					<div class="row">
-						<div class="col-sm-12">
-							<p class="text-center white">
-								Agence La Panthère - Agence web basée à Lyon.<br>
-							</p>
-							<div class="row row-no-gutters social">
-								<div class="col-sm-3">
-									<div class="text-center">
-										<a class="social" href="index.html" tabindex="0"><span class="fa fa-twitter icon-md"></span></a>
-									</div>
+		<!-- Footer - bloc-8 -->
+		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+			<div class="container bloc-sm">
+				<div class="row">
+					<div class="col-sm-12">
+						<p class="text-center white">
+							Agence La Panthère - Agence web basée à Lyon.<br>
+						</p>
+						<div class="row row-no-gutters social">
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a class="social" href="index.html" tabindex="0"><span
+											class="fa fa-twitter icon-md"></span></a>
 								</div>
-								<div class="col-sm-3">
-									<div class="text-center">
-										<a class="social" href="index.html" tabindex="0"><span class="fa fa-facebook icon-md"></span></a>
-									</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a class="social" href="index.html" tabindex="0"><span
+											class="fa fa-facebook icon-md"></span></a>
 								</div>
-								<div class="col-sm-3">
-									<div class="text-center">
-										<a class="social" href="index.html" tabindex="0"><span class="fa fa-dribbble icon-md"></span></a>
-									</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a class="social" href="index.html" tabindex="0"><span
+											class="fa fa-dribbble icon-md"></span></a>
 								</div>
-								<div class="col-sm-3">
-									<div class="text-center">
-										<a class="social" href="index.html" tabindex="0"><span class="fa fa-instagram icon-md"></span></a>
-									</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="text-center">
+									<a class="social" href="index.html" tabindex="0"><span
+											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</footer>
-			<!-- Footer - bloc-8 END -->
+			</div>
+		</footer>
+		<!-- Footer - bloc-8 END -->
 
-		</div>
-		<!-- Principal conteneur END -->
+	</div>
+	<!-- Principal conteneur END -->
 
-	</body>
+</body>
+
 </html>
