--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 	<script src="./js/bootstrap.js" async></script>
-	<script src="./js/jquery-2.1.0.js"></script>
+
 	<script src="./js/jqBootstrapValidation.js" async></script>
 	<script src="./js/jquery.touchSwipe.js" async></script>
 	<script src="./js/blocs.js" async></script>
@@ -244,7 +244,8 @@
 							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
 								data-caption="Conception d'un site pour une agence de mariage"
 								data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb"
-									alt="" width="270" height="270" async /></a>
+									alt="plusieurs objets décoratif représentatif du mariage disposé aléatoirement sur une table "
+									width="270" height="270" async /></a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
 							</h3>
@@ -322,7 +323,7 @@
 
 	</div>
 	<!-- Principal conteneur END -->
-
+	<script src="./js/jquery-2.1.0.js"></script>
 </body>
 
 </html>
