--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@
 								site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites
 								beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.
 								<br><br><a href="page2.html" tabindex="0"
-									class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-									id="cta-hero">Contact</a><br>
+									class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine">Contact</a><br>
 							</p>
 						</div>
 					</div>
@@ -216,7 +215,7 @@
 								data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 									src="img/webp/2.webp" class="img-responsive portfolio-thumb"
 									alt="image d'une photographe vue de profil tenant un appareils photo sur un trepied et regardant dans l'objectifs"
-									width="270" height="270" async /></a>
+									width="270" height="270" /></a>
 							<h3 class="mg-md text-center">
 								Création d'un site web pour photographes
 							</h3>
@@ -231,7 +230,7 @@
 								data-caption="Création d'un site internet pour un voyageur"
 								data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb"
 									alt="divers appareils electronique (ordinateur, appareis photo, objectif, drone) poser sur un fond noir bien ranger "
-									width="270" height="270" async /></a>
+									width="270" height="270" /></a>
 							<h3 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
 							</h3>
@@ -245,7 +244,7 @@
 								data-caption="Conception d'un site pour une agence de mariage"
 								data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb"
 									alt="plusieurs objets décoratif représentatif du mariage disposé aléatoirement sur une table "
-									width="270" height="270" async /></a>
+									width="270" height="270" /></a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
 							</h3>
