--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 							<a href="#" data-lightbox="img/webp/1.webp" data-gallery-id="gallery-1"
 								data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 									src="img/webp/1.webp" alt="bouquin ouvert empiler avec un léger décalage"
-									class="img-responsive portfolio-thumb" width="270" height="270" async /></a>
+									class="img-responsive portfolio-thumb" width="270" height="270" /></a>
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
 							</h3>
